# apPRoved

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 23b96b94639e_update_users.py  9c2eb188435b_add_all.py  f0d23d815cac_update_users.py  f92e10a775cc_add_filenames_to_reviews.py
api/: __init__.py  __main__.py  api.py  config.py
api/common/dto/: requests.py  responses.py
api/common/models/: message.py  user.py
api/common/orm/: __init__.py  base.py  users.py
api/common/repositories/: users.py
api/common/routes/: general_routes.py
api/common/services/: auth_service.py  github_services.py
api/common/tools/: review_pull_request.py  tool.py
api/reviewer/controllers/: pull_request_controller.py
api/reviewer/dto/: requests.py  responses.py
api/reviewer/models/: pull_request.py  repository.py  review.py
api/reviewer/orm/: pull_requests.py  repositories.py  reviews.py
api/reviewer/repositories/: pull_request_repository.py
api/reviewer/routes/: reviewer_routes.py
api/reviewer/services/: __init__.py  pull_request_service.py  pull_request_services.py
api/utils/: config.py  constants.py  database.py  exceptions.py  llm.py  log.py
configs/: __init__.py  general.yaml  log.yaml
configs/tools/: __init__.py
configs/tools/review_pull_request/: main.yaml
ui/: __main__.py  api_requests.py  main.py
